Create routes and Swagger docs
