# config/routes.rb
@@ -5,11 +5,14 @@ Rails.application.routes.draw do
   # Define your application routes per the DSL in https://guides.rubyonrails.org/routing.html
 
   # Defines the root path route ("/")
-  # root "articles#index"
+  root 'application#health_check'
   namespace :api do
     namespace :v1 do
+      resources :users
       get 'converter/cidr_to_mask'
       get 'converter/mask_to_cidr'
+      post '/auth/login', to: 'authentication#login'
+      get '/*a', to: 'application#not_found'
     end
   end
 end
